--- a/android/build.gradle
+++ b/android/build.gradle
@@ -87,9 +87,9 @@ dependencies {
   //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native:+"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-  
-  implementation "androidx.appcompat:appcompat:1.6.0-rc01"
-  implementation "androidx.appcompat:appcompat-resources:1.6.0-rc01"
+
+  implementation "androidx.appcompat:appcompat:1.6.1"
+  implementation "androidx.appcompat:appcompat-resources:1.6.1"
 }
 
 if (isNewArchitectureEnabled()) {
