--- a/example/package.json
+++ b/example/package.json
@@ -9,14 +9,16 @@
     "pods": "pod-install --quiet"
   },
   "dependencies": {
+    "i18next": "22.4.14",
     "react": "18.2.0",
+    "react-i18next": "12.2.0",
     "react-native": "0.71.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "metro-react-native-babel-preset": "0.73.9",
-    "babel-plugin-module-resolver": "^4.1.0"
+    "babel-plugin-module-resolver": "^4.1.0",
+    "metro-react-native-babel-preset": "0.73.9"
   }
 }
