--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-localization-settings",
   "version": "1.0.0",
-  "description": "test",
+  "description": "React Native module to expose per-app language preferences API on iOS and Android.",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
