chore: upgrade example app to react-native@0.76.1

--- a/example/app.json
+++ b/example/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "LocalizationSettingsExample",
-  "displayName": "LocalizationSettingsExample"
+  "name": "example",
+  "displayName": "example"
 }
