--- a/example/package.json
+++ b/example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "LocalizationSettingsExample",
+  "name": "example",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -9,16 +9,27 @@
     "pods": "pod-install --quiet"
   },
   "dependencies": {
-    "i18next": "22.4.14",
-    "react": "18.2.0",
-    "react-i18next": "12.2.0",
-    "react-native": "0.71.6"
+    "i18next": "23.16.5",
+    "react": "18.3.1",
+    "react-i18next": "15.1.1",
+    "react-native": "0.76.1",
+    "react-native-localization-settings": "link:.."
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "metro-react-native-babel-preset": "0.73.9"
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/runtime": "^7.25.0",
+    "@react-native-community/cli": "15.0.0",
+    "@react-native-community/cli-platform-android": "15.0.0",
+    "@react-native-community/cli-platform-ios": "15.0.0",
+    "@react-native/babel-preset": "0.76.1",
+    "@react-native/metro-config": "0.76.1",
+    "@react-native/typescript-config": "0.76.1",
+    "@types/react": "^18.2.6",
+    "prettier": "2.8.8",
+    "typescript": "5.0.4"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
