--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "ios",
     "cpp",
     "*.podspec",
+    "plugin",
+    "app.plugin.js",
+    "!plugin/tsconfig.*",
     "!lib/typescript/example",
     "!ios/build",
     "!android/build",
@@ -30,7 +33,10 @@
     "test": "jest",
     "typecheck": "tsc --noEmit",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
-    "prepack": "bob build",
+    "plugin-dev": "expo-module build plugin",
+    "plugin-build": "tsc --build plugin",
+    "plugin-clean": "expo-module clean plugin",
+    "prepack": "bob build && yarn plugin-clean && yarn plugin-build",
     "release": "release-it",
     "example": "yarn --cwd example",
     "bootstrap": "yarn example && yarn install && yarn example pods",
@@ -64,6 +70,7 @@
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "expo-module-scripts": "3.5.4",
     "jest": "^28.1.1",
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
@@ -71,7 +78,7 @@
     "react-native": "0.71.6",
     "react-native-builder-bob": "^0.20.0",
     "release-it": "^15.0.0",
-    "typescript": "^4.5.2"
+    "typescript": "^5.6.3"
   },
   "resolutions": {
     "@types/react": "17.0.21"
