--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-localization-settings",
-  "version": "1.2.0-beta.0",
+  "version": "1.2.0",
   "description": "React Native module to expose per-app language preferences API on iOS and Android.",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
